# FINALTHESISARTIFACT

./: 1_data_exploration.ipynb  2_training.ipynb  3_results.ipynb  README.md  __init__.py  config.py  data.py  evaluate.py  experiments.py  models.py  plots.py  pyproject.toml  requirements.txt
