[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "credit-rating-prediction"
version = "1.0.0"
description = "Corporate credit-rating prediction: XGBoost vs TabPFN-3 vs AutoGluon"
requires-python = ">=3.10"
dependencies = [
    "numpy", "pandas", "scipy", "scikit-learn",
    "matplotlib", "seaborn", "joblib",
]

[tool.setuptools]
packages = ["credit_rating"]
